--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-image-gallery": "^1.0.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-image-gallery": "^1.2.8",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
