--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-helmet": "^6.1.5",
     "@types/react-image-gallery": "^1.0.5",
     "axios": "^0.27.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-helmet": "^6.1.0",
     "react-image-gallery": "^1.2.8",
     "react-router-dom": "^6.3.0"
   },
