--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "portfolio",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.2.31",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@types/react-helmet": "^6.1.5",
@@ -23,6 +24,7 @@
     "@vitejs/plugin-react": "^1.3.0",
     "prettier": "^2.6.2",
     "typescript": "^4.6.3",
-    "vite": "^2.9.5"
+    "vite": "^2.9.5",
+    "next": "^12.1.6"
   }
 }
