--- a/package.json
+++ b/package.json
@@ -9,22 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/react-helmet": "^6.1.5",
     "@types/react-image-gallery": "^1.0.5",
     "axios": "^0.27.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-helmet": "^6.1.0",
+    "react-feather": "^2.0.10",
     "react-image-gallery": "^1.2.8",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "sass": "^1.52.3"
   },
   "devDependencies": {
+    "@types/node": "^17.0.41",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "next": "^12.1.6",
     "prettier": "^2.6.2",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.5",
-    "next": "^12.1.6"
+    "typescript": "^4.6.3"
   }
 }
